ZAL-27: remove the product catalogue
